crates/aion-awl/tests/fixtures/rev2/declarations/invalid/action_missing_return_type.awl
//! The action declaration is missing its return type.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success

type Receipt { id: String, accepted: Bool }

worker notifier
  action send_message(message: String)

step send
  message |> send_message |> route sent
